--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
                 loadShapefile(year);
             });
         });
+        
     </script>
+    <script src="mapinteraction.js"></script>
+
 </body>
 </html>
